--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Linear PoA Creator">
+    <meta name="application-name" content="Linear PoA Creator">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <title>Linear PoA Creator</title>
+
+    <meta property="og:url" content="https://gcoulby.github.io/linear-poa-creator/" />
+    <meta property="og:title" content="Linear PoA Creator" />
+    <meta property="og:description" content="A tool to quickly generate a plan of action from linear tasks" />
+    <meta property="og:image" content="https://gcoulby.github.io/linear-poa-creator/favicon/apple-touch-icon.png" />
   </head>
   <body>
     <noscript>
